# mahanayak

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml  run.py
backend/app/: main.py
backend/app/agents/: 24_7_support.py  __init__.py  content_creator.py  event_registration.py  feedback_agent.py  permission_agent.py  remainder_agent.py  resource_agent.py  volunteer_guidelines_agent.py  vounteer_content.py
backend/app/agents/organiser_agents/: __init__.py  info_gatherer.py  organiser_bot.py  organiser_reasoner.py  prompt_generator.py
backend/app/api/: __init__.py  models.py
backend/app/api/routes/: __init__.py  auth.py  organiser.py
backend/app/graphs/: __init__.py
backend/app/graphs/organiser_graph/: __init__.py  graph.py  graph_nodes.py  graph_routers.py  graph_state.py
backend/app/services/: __init__.py  event_service.py  user_service.py
backend/app/services/auth/: __init__.py  google.py
backend/app/utils/: __init__.py  db.py  organiser_prompts.py  prompts.py  sarthi_prompt.py
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilot/: route.ts
frontend/src/app/api/copilot/adapters/: PydanticAIAdapter.ts
frontend/src/app/auth/google/: page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/components/: MessageBox.tsx
frontend/src/components/Chat/: index.tsx
frontend/src/components/ChatArea/: index.tsx
frontend/src/components/SideBar/: index.tsx
